<resources>
    <string name="app_name">Tic Tac Toe XT</string>
    <string name="welcome">Welcome!</string>
    <string name="playButton">Play</string>
    <string name="pregame">Who is Playing?</string>
    <string name="startGames">Start</string>
    <string name="playerOne">Player One</string>
    <string name="playerTwo">Player Two</string>
    <string name="playerCPU">CPU</string>
    <string name="boardSize">Board Size</string>
    <string name="gameOptions">Game Options</string>
    <string name ="txtOptions">Options</string>
</resources>